--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "start": "tsx ./src/index.ts",
     "build": "tsx esbuild.ts",
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "esbuild": "^0.21.5",
-    "esbuild-plugin-d.ts": "^1.2.3",
     "npm-dts": "^1.3.12",
     "tsx": "^4.15.1",
     "typescript": "^5.4.5",
